@@ -6,6 +6,11 @@
 
                                   Changelog
 
+Daniel S (24 April 2007)
+- Robert Iakobashvili made the 'master_buffer' get allocated first once it is
+  can/will be used as it then makes the common cases save 16KB of data for each
+  easy handle that isn't used for pipelining.
+
 Dan F (23 April 2007)
 - Added <postcheck> support to the test harness.
 
